<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:id="@+id/clear_id_path"
            android:textColor="@color/black"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:text="@string/clear_id_path"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:id="@+id/export_id_path"
            android:textColor="@color/black"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:text="@string/export_id_path"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:id="@+id/export_song"
            android:textColor="@color/black"
            android:layout_margin="4dp"
            android:layout_height="wrap_content"
            android:text="@string/export_song_table"/>

    </LinearLayout>


</LinearLayout>