<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/home_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="@drawable/ripple_corner_light_gray_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:gravity="center">
                <ImageView
                    android:id="@+id/home_artwork"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="8dp"
                    android:contentDescription="@string/album" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/home_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/music_title"
                        android:layout_marginBottom="8dp"
                        android:textColor="#FF000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/home_artist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/music_artist"
                        android:textColor="#757575"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.simple.player.view.IconButton
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/home_play_mode"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/ripple_light_gray_borderless"
                    android:gravity="center"
                    android:text="\ue043"
                    android:textColor="#000000"
                    android:textSize="24sp"/>

                <com.simple.player.view.IconButton
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/home_previous"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/ripple_light_gray_borderless"
                    android:gravity="center"
                    android:text="\ue045"
                    android:textColor="#000000"
                    android:textSize="24sp"/>

                <com.simple.player.view.IconButton
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/home_play"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/ripple_light_gray_borderless"
                    android:gravity="center"
                    android:text="\ue037"
                    android:textColor="#000000"
                    android:textSize="24sp"/>

                <com.simple.player.view.IconButton
                    style="?android:attr/borderlessButtonStyle"
                    android:id="@+id/home_next"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/ripple_light_gray_borderless"
                    android:gravity="center"
                    android:text="\ue044"
                    android:textColor="#000000"
                    android:textSize="24sp"/>

                <com.simple.player.view.IconButton
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:id="@+id/home_like"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:background="@drawable/ripple_light_gray_borderless"
                    android:gravity="center"
                    android:text="\ue87d"
                    android:textColor="#000000"
                    android:textSize="24sp"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/home_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1.0"
            android:background="@drawable/ripple_corner_light_gray_12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/home_favorite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_player">

            <com.simple.player.view.Icon
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:elevation="0dp"
                android:padding="0dp"
                android:text="\ue324"
                android:textColor="@color/n_red"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/local_list"
                android:textColor="#FF000000"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1.0"
            android:background="@drawable/ripple_corner_light_gray_12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/home_playlist"
            app:layout_constraintTop_toBottomOf="@+id/home_player">

            <com.simple.player.view.Icon
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:elevation="0dp"
                android:padding="0dp"
                android:text="\ue87d"
                android:textColor="@color/n_red"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/i_like"
                android:textColor="#FF000000"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/ripple_corner_light_gray_12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/home_history"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_playlist">

            <com.simple.player.view.Icon
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:elevation="0dp"
                android:padding="0dp"
                android:text="\ue889"
                android:textColor="@color/n_red"
                android:textSize="32sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/play_history"
                android:textColor="#FF000000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_corner_white_12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_history">

            <LinearLayout
                android:id="@+id/home_custom_list_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
